--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <article class="card card--hobbies">
           <h2 class="card__title">Hobbies</h2>
           <div class="card__image-container">
-            <img src="assets/images/hobbie1.jpg" alt="Espalda con musculos">
+            <img src="assets/images/hobbie1.webp" alt="Espalda con musculos">
           </div>
           <h3 class="hobbie__title" data-section="hobbies" data-value="first-hobbie-title">Calistenia</h3>
           <p class="card__text" data-section="hobbies" data-value="first-description">Entreno calistenia varias veces a
@@ -217,77 +217,82 @@
           </div>
           <div class="skills__item">
             <p class="skills__tech">Capcut</p>
-            <div class="skills__bar skills__bar--60"></div>
+            <div class="skills__bar skills__bar--50"></div>
           </div>
       </article>
       <article class="card card--project">
         <div class="card__image-container">
-          <img src="assets/projects/orchid-laravel.jpg" alt="landing page" class="card__image">
+          <img src="assets/projects/1.png" alt="landing page" class="card__image">
         </div>
         <div class="project">
           <div class="project__tags">
             <span class="project__tag">#Php</span>
             <span class="project__tag">#Laravel</span>
+            <span class="project__tag">#Moonshine</span>
             <span class="project__tag">#MySQL</span>
-            <span class="project__tag">#Composer</span>
           </div>
-          <h2 class="card__title" data-section="projects" data-value="first-project-title">Crud orchid</h2>
-          <p class="card__text" data-section="projects" data-value="first-project">Implementé un panel administrativo en
-            Laravel utilizando Orchid, lo que permitió generar automáticamente un sistema de gestión de datos eficiente
-            con capacidades de permisos y roles. Esta implementación optimiza la administración de datos y facilita la
-            creación, actualización y eliminación de registros. Además, la interfaz fue diseñada para ser intuitiva y
-            fácil de usar, mejorando la experiencia de los administradores y usuarios. El sistema se destaca por su
-            seguridad y escalabilidad, adaptándose fácilmente a futuros cambios y necesidades de la aplicación.</p>
-          <div class="buttons">
-            <a href="#" class="button button--primary">Demo</a>
-            <a href="https://github.com/Alejandro-Jimenez-Daza/Crud-laravel-orchid" class="button button--ghost"
+          <h2 class="card__title" data-section="projects" data-value="first-project-title"> Inventario administrativo
+          </h2>
+          <p class="card__text" data-section="projects" data-value="first-project" style="margin-bottom: 20px;">
+            Desarrolle un panel administrativo
+            que lleva a cabo la contabilidad
+            de productos de un negocio o local, que permite realizar las operaciones crud basicas (crear, listar,
+            actualizar
+            y eliminar), junto con un menu lateral que tambien tiene
+            proveedor y categoria de los productos para editarlos y eliminarlos. Tambien tiene una interfaz de usuario
+            bastante agradable y muy
+            amigable con el mismo, junto con una buena experiencia para este tambien. Incluye tambien permisos basado en
+            roles
+            del usuario.</p> <br><br><br><br>
+          <div class="buttons" style="margin-top: 20em;">
+            <!-- <a href="#" class="button button--primary">Demo</a> -->
+            <a href="https://github.com/Alejandro-Jimenez-Daza/Inventario-admin" class="button button--ghost"
               target="_blank">Code</a>
           </div>
       </article>
       <article class="card card--project">
         <div class="card__image-container">
-          <img src="assets/projects/crud-.net.jpg" alt="landing page" class="card__image">
+          <img src="assets/projects/2.png" alt="landing page" class="card__image">
         </div>
         <div class="project">
           <div class="project__tags">
-            <span class="project__tag">#C#</span>
-            <span class="project__tag">#.NET framework</span>
-            <span class="project__tag">#Sql server</span>
+            <span class="project__tag">#React</span>
+            <span class="project__tag">#JavaScript</span>
+            <span class="project__tag">#HTML & CSS</span>
           </div>
-          <h2 class="card__title" data-section="projects" data-value="second-project-title">Crud .NET Autos</h2>
-          <p class="card__text" data-section="projects" data-value="second-project">Desarrollé un sistema completo de
-            gestión de autos con funcionalidades CRUD utilizando C# con el patrón MVC en .NET 6 y SQL Server. La
-            aplicación permite a los administradores agregar, actualizar, eliminar y consultar vehículos, mejorando la
-            eficiencia en el manejo de la flota. Implementé una arquitectura modular que facilita el mantenimiento y
-            futuras actualizaciones del sistema. La base de datos fue diseñada para ser flexible y optimizada para la
-            consulta de datos, lo que permite manejar un gran volumen de vehículos de manera rápida y confiable.</p>
+          <h2 class="card__title" data-section="projects" data-value="second-project-title">Conversor de divisa</h2>
+          <p class="card__text" data-section="projects" data-value="second-project">Es una web que permite conocer la
+            tasa de cambio de dos divisas en tiempo real, disponibles para escoger entre algunas divisas. Su
+            funcionamiento se basa en la integración de una API para la tasa de conversión. Es sencilla de utilizar e
+            intuitiva para el usuario, con buen diseño para el mismo.</p>
           <div class="buttons">
-            <a href="#" class="button button--primary">Demo</a>
-            <a href="https://github.com/Alejandro-Jimenez-Daza/Crud-.net-mvc-autos" class="button button--ghost"
+            <a href="https://conversor-divisa-reactapi.netlify.app/" class="button button--primary"
+              target="_blank">Demo</a>
+            <a href="https://github.com/Alejandro-Jimenez-Daza/Conversor-divisa" class="button button--ghost"
               target="_blank">Code</a>
           </div>
       </article>
       <article class="card card--project">
         <div class="card__image-container">
-          <img src="assets/projects/inventario.png" alt="landing page" class="card__image">
+          <img src="assets/projects/3.png" alt="landing page" class="card__image">
         </div>
         <div class="project">
           <div class="project__tags">
-            <span class="project__tag">#Python</span>
-            <span class="project__tag">#Qt designer 5</span>
-            <span class="project__tag">#Sqlite</span>
+            <span class="project__tag">#PHP</span>
+            <span class="project__tag">#Javascript</span>
+            <span class="project__tag">#HTML & CSS</span>
           </div>
-          <h2 class="card__title" data-section="projects" data-value="third-project-title">Inventario Qt Designer</h2>
-          <p class="card__text" data-section="projects" data-value="third-project">Creé un sistema de inventario
-            utilizando Python, Qt Designer 5 y SQLite, diseñado para facilitar el control y gestión de productos de
-            manera intuitiva y atractiva. La aplicación permite agregar, modificar y eliminar productos, así como
-            gestionar las existencias de manera eficiente. La interfaz gráfica fue desarrollada con Qt Designer para
-            ofrecer una experiencia de usuario fluida y visualmente atractiva, brindando una fácil navegación a los
-            administradores. Además, el uso de SQLite garantiza una solución ligera y rápida para el almacenamiento de
-            datos.</p>
+          <h2 class="card__title" data-section="projects" data-value="third-project-title">To-Do List App</h2>
+          <p class="card__text" data-section="projects" data-value="third-project">Desarrollé una aplicación web para
+            gestionar tareas de una persona. Esta utiliza como repositorio de datos MySQL, realizada de manera
+            totalmente vanilla con PHP, JavaScript, HTML y CSS, implementando fetch y promesas para la página, y de
+            interfaz minimalista y sencilla para el usuario. Permite al usuario crear una lista de tareas que este tenga
+            para realizar y, según las vaya completando, las puede marcar como completadas, editarlas, eliminarlas y ver
+            el detalle de creación.
+          </p>
           <div class="buttons">
-            <a href="#" class="button button--primary">Demo</a>
-            <a href="https://github.com/Alejandro-Jimenez-Daza/Crud-pyqt5" class="button button--ghost"
+            <!-- <a href="#" class="button button--primary">Demo</a> -->
+            <a href="https://github.com/Alejandro-Jimenez-Daza/Lista-de-tareas-vanilla" class="button button--ghost"
               target="_blank">Code</a>
           </div>
       </article>
